fix bug: update order transaction
